# Real-Estate-Data-Project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: listings.html  main.py  test.ipynb
app/redp_scraper/: scraper.py  settings.py  utils.py
app/redp_scraper/parsing/: feature_extraction.py  flat.py  helpers.py  listings.py
app/redp_scraper/scraping/: driver.py  mongo.py
data-collection/: pyproject.toml  scraper_main.py
data-collection/scraping/: driver.py
docker/scraper/: Dockerfile
scripts/: startup.sh
src/data-collection/: scraper_main.py  settings.py
src/data-collection/parsing/: flat_parser.py  test.html
src/data-collection/scraping/: driver.py
